@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-14T16:20:18Z",
-  "count" : 2,
-  "count_minmax" : [ 0, 2 ],
+  "timestamp" : "2022-05-15T01:25:34Z",
+  "count" : 3,
+  "count_minmax" : [ 0, 3 ],
   "count_prev_day_inc" : 3,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
