@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-14T16:20:18Z",
+  "timestamp" : "2022-05-15T01:25:34Z",
   "count_outdated" : 262,
   "uniques_outdated" : 140,
-  "count" : 297,
+  "count" : 298,
   "uniques" : 163,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
